{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 187,
  "lineage": "072cb088-8353-2b49-44b2-c1dc8f6edfa5",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601899071982:internet-gateway/igw-025b7e1dbfaebda97",
            "id": "igw-025b7e1dbfaebda97",
            "owner_id": "601899071982",
            "tags": {
              "Name": "FAR-igw"
            },
            "tags_all": {
              "App Name": "FindARoof",
              "Name": "FAR-igw",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071ad0cff1034a64e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601899071982:route-table/rtb-0fdfd88351a0b5356",
            "id": "rtb-0fdfd88351a0b5356",
            "owner_id": "601899071982",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-025b7e1dbfaebda97",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "FAR-route-table"
            },
            "tags_all": {
              "App Name": "FindARoof",
              "Name": "FAR-route-table",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-071ad0cff1034a64e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "my_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef5f5e7785c6055f",
            "route_table_id": "rtb-0fdfd88351a0b5356",
            "subnet_id": "subnet-0ed9962dd37495b16"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.my_igw",
            "module.vpc.aws_route_table.my_route_table",
            "module.vpc.aws_subnet.my_public_subnet",
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601899071982:security-group/sg-0be035390887c3a8f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be035390887c3a8f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20230609170025696700000001",
            "name_prefix": "terraform-",
            "owner_id": "601899071982",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "FAR-security-group"
            },
            "tags_all": {
              "App Name": "FindARoof",
              "Name": "FAR-security-group",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-071ad0cff1034a64e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601899071982:subnet/subnet-0ed9962dd37495b16",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed9962dd37495b16",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "601899071982",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "FAR-public-subnet"
            },
            "tags_all": {
              "App Name": "FindARoof",
              "Name": "FAR-public-subnet",
              "Terraform": "true"
            },
            "vpc_id": "vpc-071ad0cff1034a64e"
          },
          "dependencies": [
            "module.vpc.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:601899071982:vpc/vpc-071ad0cff1034a64e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0196fed3ae0cb36",
            "default_route_table_id": "rtb-0233ad9d8a6a0851a",
            "default_security_group_id": "sg-048ad5ca506f1453f",
            "dhcp_options_id": "dopt-0dd8f1574d6fd56aa",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-071ad0cff1034a64e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0233ad9d8a6a0851a",
            "owner_id": "601899071982",
            "tags": {
              "Name": "FAR-vpc"
            },
            "tags_all": {
              "App Name": "FindARoof",
              "Name": "FAR-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}